fixed lets go to always be in the same place instead of jump around if the string below it was empty

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,4 +34,12 @@ header, footer {
   font-size: 80px;
   text-align: center;
   font-family: 'Gloria Hallelujah', cursive;
+  margin: 0;
+}
+.title_wrapper{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-between;
+  height: 200px;
 }
